--- a/backups/composer.json
+++ b/backups/composer.json
@@ -16,11 +16,11 @@
     "require": {
         "php": ">=7.2.0",
         "arcanesoft/auth": "@dev",
-        "spatie/laravel-backup": "~6.4.0"
+        "spatie/laravel-backup": "^6.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0",
-        "phpunit/phpcov":  "~4.0"
+        "phpunit/phpunit": "^8.0",
+        "phpunit/phpcov":  "^6.0"
     },
     "autoload": {
         "psr-4": {
