--- a/foundation/composer.json
+++ b/foundation/composer.json
@@ -13,19 +13,20 @@
         }
     ],
     "require": {
-        "php":                       ">=7.2.0",
-        "arcanedev/breadcrumbs":     "~4.0.0",
-        "arcanedev/laravel-active":  "~2.0.0",
-        "arcanedev/laravel-html":    "~6.0.0",
-        "arcanedev/laravel-metrics": "*",
-        "arcanedev/log-viewer":      "~5.0.0",
-        "arcanedev/notify":          "~5.0.0",
-        "arcanedev/route-viewer":    "~2.0.0",
-        "arcanesoft/support":        "@dev"
+        "php":                        ">=7.2.0",
+        "arcanedev/breadcrumbs":      "^4.0",
+        "arcanedev/laravel-active":   "^2.0",
+        "arcanedev/laravel-html":     "^6.0",
+        "arcanedev/laravel-metrics":  "*",
+        "arcanedev/laravel-policies": "@dev",
+        "arcanedev/log-viewer":       "^5.0",
+        "arcanedev/notify":           "^5.0",
+        "arcanedev/route-viewer":     "^2.0",
+        "arcanesoft/support":         "@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "~8.0",
-        "phpunit/phpcov":  "~6.0"
+        "phpunit/phpunit": "^8.0",
+        "phpunit/phpcov":  "^6.0"
     },
     "autoload": {
         "psr-4": {
