--- a/media/composer.json
+++ b/media/composer.json
@@ -17,8 +17,8 @@
         "arcanesoft/auth": "@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "~8.0",
-        "phpunit/phpcov":  "~6.0"
+        "phpunit/phpunit": "^8.0",
+        "phpunit/phpcov":  "^6.0"
     },
     "autoload": {
         "psr-4": {
