--- a/passport/composer.json
+++ b/passport/composer.json
@@ -15,11 +15,11 @@
     "require": {
         "php": ">=7.2.0",
         "arcanesoft/auth": "@dev",
-        "laravel/passport": "~7.5.0"
+        "laravel/passport": "^7.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "~8.0",
-        "phpunit/phpcov":  "~6.0"
+        "phpunit/phpunit": "^8.0",
+        "phpunit/phpcov":  "^6.0"
     },
     "autoload": {
         "psr-4": {
