--- a/backups/composer.json
+++ b/backups/composer.json
@@ -15,8 +15,8 @@
     "license": "MIT",
     "require": {
         "php": ">=7.2.0",
-        "arcanesoft/foundation": "@dev",
-        "spatie/laravel-backup": "^6.4"
+        "arcanedev/laravel-backup": "dev-develop",
+        "arcanesoft/foundation": "@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
