--- a/blog/composer.json
+++ b/blog/composer.json
@@ -13,8 +13,9 @@
         }
     ],
     "require": {
-        "php": ">=7.2.0",
-        "arcanesoft/foundation": "@dev"
+        "php":                        ">=7.2.0",
+        "arcanesoft/foundation":      "@dev",
+        "arcanedev/laravel-markdown": "~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
