Updating the modules to support Laravel 7

--- a/backups/composer.json
+++ b/backups/composer.json
@@ -14,13 +14,12 @@
     "type":    "library",
     "license": "MIT",
     "require": {
-        "php": ">=7.2.0",
+        "php":                      "^7.2.5",
         "arcanedev/laravel-backup": "dev-develop",
-        "arcanesoft/foundation": "@dev"
+        "arcanesoft/foundation":    "@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
-        "phpunit/phpcov":  "^6.0"
+        "phpunit/phpunit": "^8.5|^9.0"
     },
     "autoload": {
         "psr-4": {
