--- a/passport/composer.json
+++ b/passport/composer.json
@@ -13,13 +13,12 @@
         }
     ],
     "require": {
-        "php": ">=7.2.0",
+        "php":                   "^7.2.5",
         "arcanesoft/foundation": "@dev",
-        "laravel/passport": "^7.5"
+        "laravel/passport":      "^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
-        "phpunit/phpcov":  "^6.0"
+        "phpunit/phpunit": "^8.5|^9.0"
     },
     "autoload": {
         "psr-4": {
