--- a/seo/composer.json
+++ b/seo/composer.json
@@ -13,12 +13,11 @@
         }
     ],
     "require": {
-        "php": ">=7.2.0",
+        "php":                   "^7.2.5",
         "arcanesoft/foundation": "@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
-        "phpunit/phpcov":  "^6.0"
+        "phpunit/phpunit": "^8.5|^9.0"
     },
     "autoload": {
         "psr-4": {
