--- a/blog/composer.json
+++ b/blog/composer.json
@@ -13,12 +13,12 @@
         }
     ],
     "require": {
-        "php":                        "^7.2.5",
+        "php":                        "^7.3",
         "arcanesoft/foundation":      "@dev",
-        "arcanedev/laravel-markdown": "~4.0"
+        "arcanedev/laravel-markdown": "~5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5|^9.0"
+        "phpunit/phpunit": "^9.3"
     },
     "autoload": {
         "psr-4": {
