--- a/foundation/composer.json
+++ b/foundation/composer.json
@@ -13,23 +13,24 @@
         }
     ],
     "require": {
-        "php":                            "^7.2.5",
+        "php":                            "^7.3",
         "ext-json":                       "*",
-        "arcanedev/breadcrumbs":          "^5.0",
-        "arcanedev/laravel-active":       "^3.0",
-        "arcanedev/laravel-html":         "^7.0",
-        "arcanedev/gravatar":             "^4.0",
-        "arcanedev/laravel-impersonator": "^3.0",
-        "arcanedev/laravel-metrics":      "^2.0",
-        "arcanedev/laravel-policies":     "^2.0",
-        "arcanedev/log-viewer":           "^7.0",
-        "arcanedev/notify":               "^6.0",
-        "arcanedev/route-viewer":         "^3.0",
-        "arcanedev/support":              "^7.1.1"
+        "arcanedev/breadcrumbs":          "^6.0",
+        "arcanedev/laravel-active":       "^4.0",
+        "arcanedev/laravel-html":         "^8.0",
+        "arcanedev/gravatar":             "^5.0",
+        "arcanedev/laravel-impersonator": "^4.0",
+        "arcanedev/laravel-metrics":      "^3.0",
+        "arcanedev/laravel-policies":     "^3.0",
+        "arcanedev/log-viewer":           "^8.0",
+        "arcanedev/notify":               "^7.0",
+        "arcanedev/route-viewer":         "^4.0",
+        "arcanedev/support":              "^8.0",
+        "arcanesoft/socialite":           "@dev"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0",
-        "phpunit/phpunit":     "^8.5"
+        "orchestra/testbench": "^6.0",
+        "phpunit/phpunit":     "^9.3"
     },
     "autoload": {
         "psr-4": {
