--- a/seo/composer.json
+++ b/seo/composer.json
@@ -13,11 +13,11 @@
         }
     ],
     "require": {
-        "php":                   "^7.2.5",
+        "php":                   "^7.3",
         "arcanesoft/foundation": "@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5|^9.0"
+        "phpunit/phpunit": "^9.3"
     },
     "autoload": {
         "psr-4": {
