--- a/backups/composer.json
+++ b/backups/composer.json
@@ -15,8 +15,8 @@
     "license": "MIT",
     "require": {
         "php":                      "^7.3",
-        "arcanedev/laravel-backup": "dev-develop",
-        "arcanesoft/foundation":    "^2.0"
+        "arcanedev/laravel-backup": "^2.0",
+        "arcanesoft/foundation":    "@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3"
@@ -36,13 +36,15 @@
             "providers": [
                 "Arcanesoft\\Backups\\BackupsServiceProvider"
             ]
+        },
+        "arcanesoft": {
+            "install": "Arcanesoft\\Backups\\Console\\InstallCommand",
+            "publish": "Arcanesoft\\Backups\\Console\\PublishCommand"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
         "sort-packages": true
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
