--- a/blog/composer.json
+++ b/blog/composer.json
@@ -35,13 +35,15 @@
             "providers": [
                 "Arcanesoft\\Blog\\BlogServiceProvider"
             ]
+        },
+        "arcanesoft": {
+            "install": "Arcanesoft\\Blog\\Console\\InstallCommand",
+            "publish": "Arcanesoft\\Blog\\Console\\PublishCommand"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
         "sort-packages": true
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
