--- a/foundation/composer.json
+++ b/foundation/composer.json
@@ -1,10 +1,10 @@
 {
-    "name":        "arcanesoft/foundation",
+    "name": "arcanesoft/foundation",
     "description": "ARCANESOFT - CMS built with Laravel Framework.",
-    "keywords":    ["arcanedev", "arcanesoft", "cms", "framework", "laravel"],
-    "license":     "MIT",
-    "type":        "project",
-    "authors":     [
+    "keywords": ["arcanedev", "arcanesoft", "cms", "framework", "laravel"],
+    "license": "MIT",
+    "type": "project",
+    "authors": [
         {
             "name":     "ARCANEDEV",
             "email":    "arcanedev.maroc@gmail.com",
@@ -26,7 +26,8 @@
         "arcanedev/notify":               "^7.0",
         "arcanedev/route-viewer":         "^4.0",
         "arcanedev/support":              "^8.0",
-        "arcanesoft/socialite":           "@dev"
+        "arcanesoft/socialite":           "@dev",
+        "composer/composer":              "^1.10"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
