--- a/media/composer.json
+++ b/media/composer.json
@@ -34,13 +34,15 @@
             "providers": [
                 "Arcanesoft\\Media\\MediaServiceProvider"
             ]
+        },
+        "arcanesoft": {
+            "install": "Arcanesoft\\Media\\Console\\InstallCommand",
+            "publish": "Arcanesoft\\Media\\Console\\PublishCommand"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
         "sort-packages": true
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
