--- a/passport/composer.json
+++ b/passport/composer.json
@@ -15,9 +15,11 @@
     "require": {
         "php":                   "^7.3",
         "arcanesoft/foundation": "@dev",
-        "laravel/passport":      "^8.0"
+        "laravel/passport":      "^10.0"
     },
     "require-dev": {
+        "mockery/mockery": "^1.0",
+        "orchestra/testbench": "^6.0",
         "phpunit/phpunit": "^9.3"
     },
     "autoload": {
@@ -35,13 +37,15 @@
             "providers": [
                 "Arcanesoft\\Passport\\PassportServiceProvider"
             ]
+        },
+        "arcanesoft": {
+            "install": "Arcanesoft\\Passport\\Console\\InstallCommand",
+            "publish": "Arcanesoft\\Passport\\Console\\PublishCommand"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
         "sort-packages": true
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
