--- a/analytics/phpunit.xml.dist
+++ b/analytics/phpunit.xml.dist
@@ -1,28 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit backupGlobals="false"
-         backupStaticAttributes="false"
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="./vendor/phpunit/phpunit/phpunit.xsd"
          bootstrap="vendor/autoload.php"
          colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         processIsolation="false"
-         stopOnFailure="false"
-         syntaxCheck="false"
 >
     <testsuites>
         <testsuite name="Package Test Suite">
-            <directory suffix=".php">./tests/</directory>
+            <directory>./tests/</directory>
         </testsuite>
     </testsuites>
     <coverage processUncoveredFiles="true">
         <include>
-            <directory suffix=".php">./src/</directory>
+            <directory suffix=".php">./src</directory>
         </include>
         <report>
             <clover outputFile="build/coverage/clover.xml"/>
-            <html outputDirectory="build/coverage/html" lowUpperBound="50" highLowerBound="90"/>
-            <text outputFile="build/coverage/coverage.txt" showUncoveredFiles="false" showOnlySummary="true"/>
+            <html outputDirectory="build/coverage/html"/>
+            <text outputFile="build/coverage/coverage.txt" showOnlySummary="true"/>
         </report>
     </coverage>
 </phpunit>
