--- a/foundation/composer.json
+++ b/foundation/composer.json
@@ -27,7 +27,9 @@
         "arcanedev/route-viewer":         "^4.0",
         "arcanedev/support":              "^8.0",
         "composer/composer":              "^1.10",
-        "laravel/socialite":              "^5.0"
+        "laravel/socialite":              "^5.0",
+        "bacon/bacon-qr-code":            "^2.0",
+        "pragmarx/google2fa":             "^7.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
@@ -51,11 +53,9 @@
             ]
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
         "sort-packages": true
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
