--- a/foundation/composer.json
+++ b/foundation/composer.json
@@ -13,27 +13,27 @@
         }
     ],
     "require": {
-        "php":                            "^7.3",
-        "ext-json":                       "*",
-        "arcanedev/breadcrumbs":          "^6.0",
-        "arcanedev/laravel-active":       "^4.0",
-        "arcanedev/laravel-html":         "^8.0",
-        "arcanedev/gravatar":             "^5.0",
+        "php": "^7.3",
+        "ext-json": "*",
+        "arcanedev/breadcrumbs": "^6.0",
+        "arcanedev/laravel-active": "^4.0",
+        "arcanedev/laravel-html": "^8.0",
+        "arcanedev/gravatar": "^5.0",
         "arcanedev/laravel-impersonator": "^4.0",
-        "arcanedev/laravel-metrics":      "^3.0",
-        "arcanedev/laravel-policies":     "^3.0",
-        "arcanedev/log-viewer":           "^8.0",
-        "arcanedev/notify":               "^7.0",
-        "arcanedev/route-viewer":         "^4.0",
-        "arcanedev/support":              "^8.0",
-        "composer/composer":              "^1.10",
-        "laravel/socialite":              "^5.0",
-        "bacon/bacon-qr-code":            "^2.0",
-        "pragmarx/google2fa":             "^7.0"
+        "arcanedev/laravel-metrics": "^3.0",
+        "arcanedev/laravel-policies": "^3.0",
+        "arcanedev/log-viewer": "^8.0",
+        "arcanedev/notify": "^7.0",
+        "arcanedev/route-viewer": "^4.0",
+        "arcanedev/support": "^8.0",
+        "bacon/bacon-qr-code": "^2.0",
+        "laravel/socialite": "^5.0",
+        "pragmarx/google2fa": "^7.0|^8.0"
     },
     "require-dev": {
+        "composer/composer": "^1.10",
         "orchestra/testbench": "^6.0",
-        "phpunit/phpunit":     "^9.3"
+        "phpunit/phpunit": "^9.3"
     },
     "autoload": {
         "psr-4": {
