--- a/foundation/composer.json
+++ b/foundation/composer.json
@@ -46,6 +46,10 @@
             "Arcanesoft\\Foundation\\Tests\\": "tests/"
         }
     },
+    "scripts": {
+        "test": "phpunit",
+        "coverage": "phpunit --coverage-html build/coverage/html"
+    },
     "extra": {
         "laravel": {
             "providers": [
