--- a/foundation/phpunit.xml.dist
+++ b/foundation/phpunit.xml.dist
@@ -19,4 +19,14 @@
             <text outputFile="build/coverage/coverage.txt" showOnlySummary="true"/>
         </report>
     </coverage>
+    <php>
+        <server name="APP_ENV" value="testing"/>
+        <server name="APP_KEY" value="AckfSECXIvnK5r28GVIWUAxmbBSjTsmF"/>
+        <server name="DB_CONNECTION" value="sqlite"/>
+        <server name="DB_DATABASE" value=":memory:"/>
+        <server name="BCRYPT_ROUNDS" value="4"/>
+        <server name="CACHE_DRIVER" value="array"/>
+        <server name="MAIL_MAILER" value="array"/>
+        <server name="QUEUE_CONNECTION" value="sync"/>
+    </php>
 </phpunit>
